UPDATE: merge submit, transfer20, tx
