# docs/swagger.json
@@ -609,6 +609,12 @@
                 },
                 "txSeq": {
                     "type": "integer"
+                },
+                "dataSize": {
+                    "type": "integer"
+                },
+                "baseFee": {
+                    "type": "string"
                 }
             }
         },
